name: beam-mssql
version: 0.1.0.0
synopsis: Connection layer between beam and MsSQL
description:
homepage:             http://travis.athougies.net/projects/beam.html
license:              MIT
license-file:         LICENSE
author:               Travis Athougies
maintainer:           travis@athougies.net
build-type:           Simple
category:             Database
cabal-version:        >=1.18

library
  exposed-modules:    Database.Beam.MsSQL
                      Database.Beam.MsSQL.Connection
                      Database.Beam.MsSQL.Parser
                      Database.Beam.MsSQL.FromField
  other-modules:      Database.Beam.MsSQL.Syntax
  build-depends:      base                 >=4.7  && <5.0,
                      beam-core            >=0.8  && <0.9,

                      tds                  >=0.1  && <0.2,

                      text                 >=1.0  && <1.3,
                      bytestring           >=0.10 && <0.11,

                      mtl,
                      streaming,
                      streaming-bytestring,
                      binary,
--                      attoparsec,
--                      attoparsec-binary,
                      free, errors, time, scientific
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables, OverloadedStrings, MultiParamTypeClasses, RankNTypes,
                      FlexibleInstances, DeriveDataTypeable, DeriveGeneric, StandaloneDeriving,
                      TypeFamilies, GADTs, OverloadedStrings, CPP, TypeApplications, FlexibleContexts
  ghc-options:        -Wall
  if flag(werror)
    ghc-options:      -Werror

-- executable beam-mssql-test
--   main-is:            Test.hs
--   other-modules:      Chinook.Schema
--   hs-source-dirs:     test
--   build-depends:      base                 >=4.7  && <5.0,
--                       beam-core            >=0.8  && <0.9,
--                       beam-mssql, tds,
--                       time, text, scientific
--   default-language:   Haskell2010
--   default-extensions: OverloadedStrings, StandaloneDeriving, FlexibleInstances, FlexibleContexts,
--                       MultiParamTypeClasses, TypeFamilies, DeriveGeneric
--   ghc-options:        -Wall
-- 
flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True
